--- a/spotify_analysis.ipynb
+++ b/spotify_analysis.ipynb
@@ -5,7 +5,8 @@
    "id": "56df14a2",
    "metadata": {},
    "source": [
-    "### Top 50 Spotify Tracks of 2020"
+    "### Top 50 Spotify Tracks of 2020\n",
+    "**The aim** of this project is to perform basic exploratory analysis of Spotify's top 50 hits of 2020, identify the most succesfull artists  and comapre the features of different music genres."
    ]
   },
   {
@@ -13,7 +14,17 @@
    "id": "45bd0a43",
    "metadata": {},
    "source": [
-    "**Importing and reading the data**"
+    "*Importing and reading the data*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fec3c6aa",
+   "metadata": {},
+   "source": [
+    "pop_artist = df[\"artist\"].value_counts()\n",
+    "pop_albums = df[\"album\"].value_counts()\n",
+    "genre_count = df[\"genre\"].value_counts()"
    ]
   },
   {
@@ -33,19 +44,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7e5eb2da",
+   "cell_type": "markdown",
+   "id": "cd7810c4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "*Importing libraries/modules/functions needed for the analysis*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "7e5eb2da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import plotly.express as px\n",
+    "from plotly.subplots import make_subplots\n",
+    "import scipy.stats\n",
+    "from itertools import combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "fdf97688",
    "metadata": {},
    "outputs": [],
@@ -71,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "afc60f33",
    "metadata": {},
    "outputs": [
@@ -85,6 +108,244 @@
    ],
    "source": [
     "print(f\"There are {df.shape[0]} observations and {df.shape[1]} features\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d1be61eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 50 entries, 0 to 49\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   artist            50 non-null     object \n",
+      " 1   album             50 non-null     object \n",
+      " 2   track_name        50 non-null     object \n",
+      " 3   track_id          50 non-null     object \n",
+      " 4   energy            50 non-null     float64\n",
+      " 5   danceability      50 non-null     float64\n",
+      " 6   key               50 non-null     int64  \n",
+      " 7   loudness          50 non-null     float64\n",
+      " 8   acousticness      50 non-null     float64\n",
+      " 9   speechiness       50 non-null     float64\n",
+      " 10  instrumentalness  50 non-null     float64\n",
+      " 11  liveness          50 non-null     float64\n",
+      " 12  valence           50 non-null     float64\n",
+      " 13  tempo             50 non-null     float64\n",
+      " 14  duration_ms       50 non-null     int64  \n",
+      " 15  genre             50 non-null     object \n",
+      "dtypes: float64(9), int64(2), object(5)\n",
+      "memory usage: 6.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info() # GALIMA NAUDOT SITA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "769f4a18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>energy</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.609300</td>\n",
+       "      <td>0.716720</td>\n",
+       "      <td>5.720000</td>\n",
+       "      <td>-6.225900</td>\n",
+       "      <td>0.256206</td>\n",
+       "      <td>0.124158</td>\n",
+       "      <td>0.015962</td>\n",
+       "      <td>0.196552</td>\n",
+       "      <td>0.555710</td>\n",
+       "      <td>119.690460</td>\n",
+       "      <td>199955.360000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.154348</td>\n",
+       "      <td>0.124975</td>\n",
+       "      <td>3.709007</td>\n",
+       "      <td>2.349744</td>\n",
+       "      <td>0.265250</td>\n",
+       "      <td>0.116836</td>\n",
+       "      <td>0.094312</td>\n",
+       "      <td>0.176610</td>\n",
+       "      <td>0.216386</td>\n",
+       "      <td>25.414778</td>\n",
+       "      <td>33996.122488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.225000</td>\n",
+       "      <td>0.351000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-14.454000</td>\n",
+       "      <td>0.001460</td>\n",
+       "      <td>0.029000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.057400</td>\n",
+       "      <td>0.060500</td>\n",
+       "      <td>75.801000</td>\n",
+       "      <td>140526.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.494000</td>\n",
+       "      <td>0.672500</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-7.552500</td>\n",
+       "      <td>0.052800</td>\n",
+       "      <td>0.048325</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.093950</td>\n",
+       "      <td>0.434000</td>\n",
+       "      <td>99.557250</td>\n",
+       "      <td>175845.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.597000</td>\n",
+       "      <td>0.746000</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>-5.991500</td>\n",
+       "      <td>0.188500</td>\n",
+       "      <td>0.070050</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.111000</td>\n",
+       "      <td>0.560000</td>\n",
+       "      <td>116.969000</td>\n",
+       "      <td>197853.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.729750</td>\n",
+       "      <td>0.794500</td>\n",
+       "      <td>8.750000</td>\n",
+       "      <td>-4.285500</td>\n",
+       "      <td>0.298750</td>\n",
+       "      <td>0.155500</td>\n",
+       "      <td>0.000020</td>\n",
+       "      <td>0.271250</td>\n",
+       "      <td>0.726250</td>\n",
+       "      <td>132.317000</td>\n",
+       "      <td>215064.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.855000</td>\n",
+       "      <td>0.935000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>-3.280000</td>\n",
+       "      <td>0.934000</td>\n",
+       "      <td>0.487000</td>\n",
+       "      <td>0.657000</td>\n",
+       "      <td>0.792000</td>\n",
+       "      <td>0.925000</td>\n",
+       "      <td>180.067000</td>\n",
+       "      <td>312820.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          energy  danceability        key   loudness  acousticness  \\\n",
+       "count  50.000000     50.000000  50.000000  50.000000     50.000000   \n",
+       "mean    0.609300      0.716720   5.720000  -6.225900      0.256206   \n",
+       "std     0.154348      0.124975   3.709007   2.349744      0.265250   \n",
+       "min     0.225000      0.351000   0.000000 -14.454000      0.001460   \n",
+       "25%     0.494000      0.672500   2.000000  -7.552500      0.052800   \n",
+       "50%     0.597000      0.746000   6.500000  -5.991500      0.188500   \n",
+       "75%     0.729750      0.794500   8.750000  -4.285500      0.298750   \n",
+       "max     0.855000      0.935000  11.000000  -3.280000      0.934000   \n",
+       "\n",
+       "       speechiness  instrumentalness   liveness    valence       tempo  \\\n",
+       "count    50.000000         50.000000  50.000000  50.000000   50.000000   \n",
+       "mean      0.124158          0.015962   0.196552   0.555710  119.690460   \n",
+       "std       0.116836          0.094312   0.176610   0.216386   25.414778   \n",
+       "min       0.029000          0.000000   0.057400   0.060500   75.801000   \n",
+       "25%       0.048325          0.000000   0.093950   0.434000   99.557250   \n",
+       "50%       0.070050          0.000000   0.111000   0.560000  116.969000   \n",
+       "75%       0.155500          0.000020   0.271250   0.726250  132.317000   \n",
+       "max       0.487000          0.657000   0.792000   0.925000  180.067000   \n",
+       "\n",
+       "         duration_ms  \n",
+       "count      50.000000  \n",
+       "mean   199955.360000  \n",
+       "std     33996.122488  \n",
+       "min    140526.000000  \n",
+       "25%    175845.500000  \n",
+       "50%    197853.500000  \n",
+       "75%    215064.000000  \n",
+       "max    312820.000000  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe() # sitas irgi geras. Nors butu dar geriau jei galeciau pasirinkt "
    ]
   },
   {
@@ -465,7 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px"
+    "# import plotly.express as px"
    ]
   },
   {
@@ -2597,7 +2858,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotly.subplots import make_subplots"
+    "# from plotly.subplots import make_subplots"
    ]
   },
   {
@@ -5021,7 +5282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "89bd2c1a",
    "metadata": {},
    "outputs": [
@@ -5554,7 +5815,7 @@
     }
    ],
    "source": [
-    "import scipy.stats\n",
+    "# import scipy.stats\n",
     "\n",
     "scipy.stats.pearsonr(numerical_df[\"energy\"], numerical_df[\"loudness\"])"
    ]
@@ -5645,7 +5906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import combinations\n",
+    "# from itertools import combinations\n",
     "\n",
     "column_names = numerical_df.columns.tolist()\n",
     "column_pairs = list(combinations(column_names, 2))\n",
@@ -10667,8 +10928,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9d4b01b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Index: 40 entries, Billie Eilish to JP Saxe\n",
+      "Series name: artist\n",
+      "Non-Null Count  Dtype\n",
+      "--------------  -----\n",
+      "40 non-null     int64\n",
+      "dtypes: int64(1)\n",
+      "memory usage: 1.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pop_artist.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "010a0823",
    "metadata": {},
    "outputs": [],
    "source": []
